[workspace]
resolver = "2"
members = [
  "sbuild",
  "sbuild-linter",
  "sbuild-meta",
  "sbuild-cache"
]

[workspace.package]
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
license = "MIT"
edition = "2021"
description = "Toolchain for building, linting, metadata generation, and cache management of SBUILD packages"
repository = "https://github.com/pkgforge/sbuilder"
keywords = ["soar", "sbuild", "lint", "build", "package"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
