[package]
name = "sbuild-cache"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Historical build cache for SBUILD packages"
repository = "https://github.com/pkgforge/sbuilder"
keywords = ["soar", "sbuild", "cache", "sqlite", "build-history"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
log.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lib]
name = "sbuild_cache"
path = "src/lib.rs"
