[package]
name = "sbuild-linter"
description = "Linter for SBUILD package files"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
colored = "2.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
which = "7.0.0"
