[package]
name = "sbuild-linter"
description = "Linter for SBUILD package files"
version = "0.5.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
colored.workspace = true
indexmap.workspace = true
saphyr.workspace = true
tempfile.workspace = true
url.workspace = true
which.workspace = true

[lib]
name = "sbuild_linter"
path = "src/lib.rs"
