[package]
name = "sbuild-meta"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Metadata generator for SBUILD packages"
repository = "https://github.com/pkgforge/sbuilder"
keywords = ["soar", "sbuild", "metadata", "ghcr", "package"]

[dependencies]
base64.workspace = true
blake3.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
glob.workspace = true
log.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
saphyr.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
xz2.workspace = true
zstd.workspace = true

[lib]
name = "sbuild_meta"
path = "src/lib.rs"
