[package]
name = "sbuild-meta"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Metadata generator for SBUILD packages"
repository = "https://github.com/pkgforge/sbuilder"
keywords = ["soar", "sbuild", "metadata", "ghcr", "package"]

[dependencies]
blake3.workspace = true
glob.workspace = true
log.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
saphyr.workspace = true
thiserror.workspace = true

[lib]
name = "sbuild_meta"
path = "src/lib.rs"
