[package]
name = "sbuild"
version = "0.1.10"
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
blake3 = "1.8.2"
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
colored = "3.0.0"
futures = "0.3.31"
glob = "0.3.2"
goblin = { version = "0.10.0", features = ["elf64", "elf32", "endian_fd", "std"] }
indexmap = "2.9.0"
memmap2 = "0.9.5"
reqwest = { version = "0.12.19", features = ["blocking", "http2", "rustls-tls", "stream"], default-features = false }
sbuild-linter = { version = "*", path = "../sbuild-linter" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["indexmap"] }
serde_yml = "0.0.12"
squishy = { version = "0.3.2", features = ["appimage"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
which = "7.0.3"
