[package]
name = "sbuild"
version = "0.2.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
blake3 = "1.8"
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "3.0"
futures = "0.3"
glob = "0.3"
goblin = { version = "0.10", features = ["elf64", "elf32", "endian_fd", "std"] }
indexmap = "2.9"
memmap2 = "0.9"
reqwest = { version = "0.12", features = ["blocking", "http2", "rustls-tls", "stream"], default-features = false }
sbuild-linter = { version = "*", path = "../sbuild-linter" }
sbuild-meta = { version = "*", path = "../sbuild-meta" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["indexmap"] }
serde_yml = "0.0.12"
sha2 = "0.10"
squishy = { version = "0.3", features = ["appimage"] }
tempfile = "3.20"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7.0"
