[package]
name = "sbuild"
version = "0.2.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
blake3.workspace = true
chrono = { workspace = true, features = ["now"] }
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
futures.workspace = true
glob.workspace = true
goblin.workspace = true
indexmap.workspace = true
log.workspace = true
memmap2.workspace = true
reqwest = { workspace = true, features = ["blocking", "http2", "rustls-tls", "stream"] }
sbuild-cache.workspace = true
sbuild-linter.workspace = true
sbuild-meta.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["indexmap"] }
serde_yml.workspace = true
sha2.workspace = true
squishy.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "time"] }
which.workspace = true
